--- a/static/login.html
+++ b/static/login.html
@@ -109,9 +109,9 @@
             <input name="password" placeholder="Password" required type="password">
             <button name="submit" type="submit" disabled>Login</button>
         </form>
-        <div class="info"><b>This project is not affiliated with Mailspring.</b><br>More users can be added via the CLI.<br>For mre info check out the <a href="">Documentation</a>.</div>
+        <div class="info"><b>This project is not affiliated with Mailspring.</b><br>More users can be added via the CLI.<br>For mre info check out the <a href="https://github.com/1RandomDev/mailspring-api#createmanage-a-user-account">Documentation</a>.</div>
     </div>
-    <a class="github-link" href="https://github.com/1RandomDev/mailspring-api" target="_blank">GitHub</a>
+    <a class="github-link" href="https://github.com/1RandomDev/mailspring-api">GitHub</a>
 
     <script>
         const loginMessage = document.getElementById('loginMessage');
